
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int pr_addr; } ;
typedef TYPE_1__ psinfo_t ;
typedef int filename ;


 int O_RDONLY ;
 int close (int) ;
 int getpid () ;
 int memset (TYPE_1__*,int ,int) ;
 int open (char*,int ) ;
 int read (int,TYPE_1__*,int) ;
 int snprintf (char*,int,char*,int) ;

int get_proc_address() {
   int fd;
   char filename[512];
   psinfo_t psinfo;

   snprintf(filename, sizeof(filename), "/proc/%d/psinfo", getpid());
   fd = open(filename, O_RDONLY);
   if (fd == -1) {
      return -1;
   }

   memset(&psinfo, 0, sizeof(psinfo_t));
   if (read(fd, &psinfo, sizeof(psinfo_t)) != sizeof(psinfo_t)) {
      close(fd);
      return -1;
   }

   close(fd);

   return psinfo.pr_addr;
}
