; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_15962.c_get_proc_address.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_15962.c_get_proc_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"/proc/%d/psinfo\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_proc_address() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca [512 x i8], align 16
  %4 = alloca %struct.TYPE_4__, align 4
  %5 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %6 = call i32 (...) @getpid()
  %7 = call i32 @snprintf(i8* %5, i32 512, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %9 = load i32, i32* @O_RDONLY, align 4
  %10 = call i32 @open(i8* %8, i32 %9)
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp eq i32 %11, -1
  br i1 %12, label %13, label %14

13:                                               ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %28

14:                                               ; preds = %0
  %15 = call i32 @memset(%struct.TYPE_4__* %4, i32 0, i32 4)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @read(i32 %16, %struct.TYPE_4__* %4, i32 4)
  %18 = sext i32 %17 to i64
  %19 = icmp ne i64 %18, 4
  br i1 %19, label %20, label %23

20:                                               ; preds = %14
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @close(i32 %21)
  store i32 -1, i32* %1, align 4
  br label %28

23:                                               ; preds = %14
  %24 = load i32, i32* %2, align 4
  %25 = call i32 @close(i32 %24)
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %1, align 4
  br label %28

28:                                               ; preds = %23, %20, %13
  %29 = load i32, i32* %1, align 4
  ret i32 %29
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @read(i32, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
